Fixed text alignment and HTML structure

--- a/style.css
+++ b/style.css
@@ -1,15 +1,52 @@
-body {
-    margin:0;
+* {
+   margin: 0;
+   padding: 0;
 }
 header {
     background-color: #1F2937;
-    width: 100%;
-    height: 200px;
+    display: flex;
+    flex-direction: row;
+    
 }
+#header-logo {
+    color: #F9FAF8;
+    font-size: 24px;
+
+}
+.Header-link {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+ul {
+    display: flex;
+    list-style-type: none;
+    flex-direction: row;
+}
+.nleft,.nright{
+    display: flex;
+    width:50%;
+    justify-content: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .section1 {
     background-color: aliceblue;
     width: 100%;
     height: 200px;
+    
+
 }
 .section2 {
     background-color: lightgray;
